<?xml version="1.0"?>
<package format="2">
  <name>teleop_keyboard</name>
  <version>0.0.0</version>
  <description>Generic keyboard teleop for twist robots (in C++)! Based off of the teleop_twist_keyboard Python ROS node.</description>

  <author email="methyldragon@gmail.com">methylDragon</author>
  <maintainer email="methyldragon@gmail.com">methylDragon</maintainer>
  <url type="website">http://github.com/methylDragon</url>
  <url>http://www.ros.org/wiki/teleop_keyboard</url>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>diagnostic_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>move_base_msgs</build_depend>
  <build_depend>rosplan_dispatch_msgs</build_depend>
  <build_depend>rosplan_knowledge_msgs</build_depend>
  <build_depend>rosplan_planning_system</build_depend>
  <build_depend>semantic_navigation_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  
  <exec_depend>rospy</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>move_base_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>diagnostic_msgs</exec_depend>
  <exec_depend>rosplan_dispatch_msgs</exec_depend>
  <exec_depend>rosplan_knowledge_msgs</exec_depend>
  <exec_depend>rosplan_planning_system</exec_depend>
  <exec_depend>semantic_navigation_msgs</exec_depend>
  <exec_depend>actionlib</exec_depend>
</package>
